<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JustJava</string>
    <string name="coffee_time">Coffee Time!</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="order">Order</string>
    <string name="chocolate">Chocolate</string>

<!--    &lt;!&ndash;-->
<!--      Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the-->
<!--      user's name. [CHAR LIMIT=NONE]-->
<!--    &ndash;&gt;-->
<!--    <string name="order_summary_name">Nombre: <xliff:g id="name" example="Amy">%s</xliff:g></string>-->

<!--    &lt;!&ndash;-->
<!--      Whipped cream topping for the order summary. It will be shown in the format of-->
<!--      "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]-->
<!--    &ndash;&gt;-->
<!--    <string name="order_summary_whipped_cream">Agregue la crema batida? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>-->

<!--    &lt;!&ndash;-->
<!--      Chocolate topping for the order summary. It will be shown in the format of-->
<!--      "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]-->
<!--    &ndash;&gt;-->
<!--    <string name="order_summary_chocolate">Agregue el chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>-->

<!--    &lt;!&ndash;-->
<!--      Quantity of coffee cups for the order summary. It will be shown in the format of-->
<!--      "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]-->
<!--    &ndash;&gt;-->
<!--    <string name="order_summary_quantity">Cantidad: <xliff:g id="quantity" example="2">%d</xliff:g></string>-->

<!--    &lt;!&ndash;-->
<!--      Total price for the order summary. It will be shown in the format of-->
<!--      "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]-->
<!--    &ndash;&gt;-->
<!--    <string name="order_summary_price">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>-->

<!--    &lt;!&ndash;-->
<!--      Subject line for the order summary email. It will be in the format of-->
<!--      "Just Java order for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]-->
<!--    &ndash;&gt;-->
<!--    <string name="order_summary_email_subject">Sólo java para <xliff:g id="name" example="Amy">%s</xliff:g></string>-->

<!--    &lt;!&ndash; Thank you message for the order summary. [CHAR LIMIT=NONE] &ndash;&gt;-->
<!--    <string name="thank_you">Thank You!</string>-->
</resources>