<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/coffee_time"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:hint="@string/enter_your_name" />

    <TextView
        android:id="@+id/toppings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/toppings"
        android:textAllCaps="true"
        android:textSize="18sp"/>

    <CheckBox
        android:id="@+id/whipped_cream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
        android:textSize="16sp"
        android:paddingLeft="24dp"
        android:layout_marginHorizontal="80dp" />

    <CheckBox
        android:id="@+id/chocolate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:textSize="16sp"
        android:paddingLeft="24dp"
        android:layout_marginHorizontal="80dp" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:onClick="decrement"
            android:text="@string/minus" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:onClick="increment"
            android:text="@string/plus" />
    </LinearLayout>

<!--    <TextView-->
<!--        android:id="@+id/price"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:fontFamily="sans-serif-black"-->
<!--        android:text="Order Summary"-->
<!--        android:textAllCaps="true"-->
<!--        android:textSize="18sp" />-->

<!--    <TextView-->
<!--        android:id="@+id/order_summary_text_view"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:fontFamily="@font/carter_one"-->
<!--        android:text="$0"-->
<!--        android:textColor="#000000"-->
<!--        android:textSize="18sp" />-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/order" />

    </LinearLayout>
</ScrollView>